tests/build/cases/widget_new/property_generic1.stderr
error[E0283]: type annotations needed
   --> cases/widget_new/property_generic1.rs:6:17
    |
6   |         value = 0;
    |                 ^ cannot infer type of the type parameter `T` declared on the struct `value_ArgsImpl`
    |
    = note: cannot satisfy `_: VarValue`
note: required by a bound in `value_ArgsImpl::<T, T_value>::new`
   --> $WORKSPACE/zero-ui/src/widgets/toggle_wgt.rs
    |
    |     pub fn value<T: VarValue + PartialEq>(child: impl UiNode, value: impl IntoVar<T>) -> impl UiNode {
    |                     ^^^^^^^^ required by this bound in `value_ArgsImpl::<T, T_value>::new`
help: consider specifying the generic arguments
    |
6   |         value = 0::<T, i32>;
    |                  ++++++++++

error[E0283]: type annotations needed
   --> cases/widget_new/property_generic1.rs:6:17
    |
6   |         value = 0;
    |                 ^ cannot infer type of the type parameter `T` declared on the struct `value_ArgsImpl`
    |
    = note: multiple `impl`s satisfying `i32: IntoVar<_>` found in the `zero_ui_core` crate:
            - impl IntoVar<CornerRadius> for i32;
            - impl IntoVar<GridSpacing> for i32;
            - impl IntoVar<Option<i32>> for i32;
            - impl IntoVar<SideOffsets> for i32;
            and 5 more
note: required by a bound in `value_ArgsImpl::<T, T_value>::new`
   --> $WORKSPACE/zero-ui/src/widgets/toggle_wgt.rs
    |
    |     pub fn value<T: VarValue + PartialEq>(child: impl UiNode, value: impl IntoVar<T>) -> impl UiNode {
    |                                                                           ^^^^^^^^^^ required by this bound in `value_ArgsImpl::<T, T_value>::new`
help: consider specifying the generic arguments
    |
6   |         value = 0::<T, i32>;
    |                  ++++++++++
